# rust-resolver

./: .gitignore  Cargo.toml  Makefile  README.md  Vagrantfile
src/: main.rs  resolver.rs
src/resolver/: hyper_lib.rs  mod.rs  resolver_lib.rs
